fix: ensure page resets to top on reload and increase navbar z-index

--- a/src/components/organisms/Navbar/Navbar.module.scss
+++ b/src/components/organisms/Navbar/Navbar.module.scss
@@ -6,7 +6,7 @@
   left: 0;
   width: 100%;
   height: 80px;
-  z-index: 100;
+  z-index: 10000;
   display: flex;
   align-items: center;
   border-bottom: 1px solid rgba(0, 0, 0, 0.05);
